spacing, and carousel images correction

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -681,6 +681,14 @@
 } 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1800px) {
+    .first_slide{
+    position: relative;
+    bottom: 300px;
+    }
   
+    .second_slide{
+        position: relative;
+        bottom: 600px;
+    }
 }
